# calendar-tool

./: .cursorrules  .gitignore  .pre-commit-config.yaml  .ruffignore  README.md  llm_context.md  mypy.ini  pyproject.toml  pyrightconfig.json
.github/workflows/: deploy-on-main.yml
docs/: CERTIFICATES.md  CICD.md
src/calendar-agent/: calendar_agent_handler.py
src/calendar-agent-api/: fast_api_server.py
src/calendar-agent-api/clients/: calendar_client.py
src/calendar-agent-api/infrastructure/: local_platform_manager.py
src/calendar-agent/app/: logging.py  main.py
src/calendar-agent/infrastructure/: local_platform_manager.py  openai_gpt_manager.py  slack_manager.py
src/calendar-agent/prompts/: prompts.md
src/calendar-agent/services/: cache_service.py  llm_service.py  mcp_client_service.py  mcp_discovery_service.py  renderer_service.py
src/calendar_agent/: .lambdaignore  INSTALL_STEPS.md  agent_config.json  agent_handler.py  agent_iam_policy.json  calendar_agent_handler.py  pyproject.toml
src/calendar_agent/app/: config.py  main.py  process_event.py
src/calendar_agent/infrastructure/: aws_platform_manager.py  data_models.py  local_platform_manager.py  openai_gpt_manager.py  platform_manager.py
src/calendar_agent/services/: cache_service.py  hmac_service.py  llm_service.py  mcp_client_service.py  mcp_discovery_service.py  renderer_service.py  requests_helpers.py  response_helpers.py  validate_slack_user.py
src/calendar_agent_api/: .lambdaignore  agent_api_config.json  agent_api_handler.py  aws_api_gateway_routes.json  calendar_agent_api_handler.py  fast_api_server.py  pyproject.toml
src/calendar_agent_api/app/: config.py  main.py  process_event.py
src/calendar_agent_api/auth/: client_auth.py  slack_auth.py
src/calendar_agent_api/clients/: README.md  calendar_client.py
src/calendar_agent_api/infrastructure/: aws_platform_manager.py  local_platform_manager.py  platform_manager.py
src/calendar_agent_api/services/: cache_service.py
src/calendar_install/: .gitignore  CERTIFICATES_README.md  INSTALL_README.md  aws_api_gateway_manager.py  aws_certs_acm_cert.py  aws_certs_create_api_domain_mtls.py  aws_certs_truststore_bucket.py  aws_config_manager.py  aws_deploy.py  aws_iam_manager.py  aws_lambda_manager.py  aws_mTLS_manager.py  aws_parameter_manager.py  certificates_manager.py
src/calendar_install/tools/: aws_deploy_api_gateway.py  aws_deploy_lambda.py  aws_iam_upload_policy.py  aws_upsert_parameters.py
src/calendar_mcp/: .lambdaignore  README.md  aws_calendar_mcp_iam_policy.json  aws_calendar_params.json  aws_deploy_api_gateway.py  aws_deploy_lambda.py  aws_iam_upload_policy.py  aws_mcp_api_routes.json  aws_mcp_lambda_config.json  aws_upsert_parameters.py  fast_api_server.py  generate_fernet_key.py  handler.py  lambda_config.json  mcp_config.json  mcp_handler.py  pyproject.toml  requirements.txt
src/calendar_mcp/app/: config.py  main.py
src/calendar_mcp/auth/: bearer_token_auth.py  google_oauth.py  hmac_auth.py
src/calendar_mcp/clients/: client_mtls.py  demo_client.py  demo_curl.sh
src/calendar_mcp/fast_api_server/: google_oauth_server.py  server.py
src/calendar_mcp/infrastructure/: hmac_auth.py  local_platform_manager.py
src/calendar_mcp/mcp/: manifest.py  router.py  schemas.py
src/calendar_mcp/services/: redis_services.py
src/calendar_mcp/shared_infrastructure/: cryptography_manager.py
src/calendar_mcp/tools/: calendar.py
src/calendar_oauth_redirect/: .lambdaignore  fast_api_server.py  redirect_config.json  redirect_handler.py  requirements.txt
src/calendar_oauth_redirect/app/: config.py  main.py
src/calendar_oauth_redirect/auth/: google_oauth.py
src/calendar_oauth_redirect/infrastructure/: __init__.py  aws_platform_manager.py
src/calendar_oauth_redirect/services/: redis_services.py
src/calendar_oauth_redirect/shared_infrastructure/: redis_manager.py
src/calendar_shared/: aws_platform_manager.py  cryptography_manager.py  hmac_auth.py  local_platform_manager.py  redis_manager.py  trigger_github_automation.py
typings/: __init__.py
typings/anyio/: __init__.pyi
typings/boto3/: __init__.pyi  iam.pyi  lambda.pyi  py.typed  sts.pyi
typings/botocore/: __init__.py  __init__.pyi  config.pyi  exceptions.py  exceptions.pyi
typings/cryptography/: __init__.pyi  fernet.pyi  py.typed
typings/fastapi/: __init__.pyi  py.typed  responses.pyi
typings/google/: __init__.pyi  py.typed
typings/google/auth/transport/: requests.pyi
typings/google/oauth2/: __init__.pyi  credentials.pyi
typings/google/oauth2/credentials/: __init__.pyi
typings/google_auth_oauthlib/: __init__.pyi  flow.pyi  py.typed
typings/googleapiclient/: __init__.pyi  discovery.pyi  py.typed
typings/openai/: __init__.pyi
typings/redis/: __init__.pyi  py.typed
typings/requests/: __init__.pyi
typings/requests_pkcs12/: __init__.py  __init__.pyi
typings/slack_sdk/: __init__.pyi  errors.pyi  signature.pyi
typings/starlette/: __init__.pyi  datastructures.pyi  py.typed
typings/starlette/datastructures/: __init__.pyi
typings/urllib3/: __init__.pyi  adapters.pyi
